# MouUA

./: .gitignore  1_serial.json  2_over_tcp.json  3_tcp.json  BOOLEAN_ARRAY_FIX.md  ModUA-onedir.spec  ModUA-onefile.spec  ModUA.py  ModUA_onedir.spec  ModUA_onefile.spec  ModUA_parameters.md  README.md  architecture_analysis_full.md  architecture_diagram_ASC.md  pyproject.toml  role_architecture.md  start_test.bat  test_boolean_array.py  test_e2e_boolean_array.py
.github/workflows/: build-release.yml  macos_build.yml
certs/: server_certificate.der  server_private_key.pem
core/: __init__.py  diagnostics.py  ui_models.py  utils.py
core/OPC_UA/: opcua_server.py
core/config/: __init__.py  constants.py
core/controllers/: __init__.py  base_controller.py  config_builder.py
core/modbus/: modbus_client.py  modbus_mapping.py  modbus_monitor.py  modbus_worker.py
core/utils/: __init__.py  network_utils.py  validation_utils.py
ui/: base_dialogs.py  components.py  dragdrop_tree.py  terminal_window.py
ui/dialogs/: channel_dialog.py  device_dialog.py  group_dialog.py  opcua_dialog.py  tag_dialog.py  write_value_dialog.py
